# Tunan

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/tunan/: common.h  math.h
include/tunan/base/: containers.h  distributions.h  hash.h  interactions.h  math.h  mediums.h  spectrum.h  transform.h
include/tunan/bsdf/: BSDF.h
include/tunan/bsdf/bxdf/: BxDF.h
include/tunan/gpu/: cuda_utils.h  optix_ray.h  optix_tracing.h  optix_utils.h
include/tunan/material/: Lambertian.h  Material.h  bsdfs.h  fresnels.h  mappings.h  materials.h  microfacets.h  textures.h
include/tunan/medium/: Medium.h  mediums.h  phase_functions.h
include/tunan/parallel/: atomics.h  parallels.h
include/tunan/sampler/: SamplerFactory.h  rng.h  samplers.h
include/tunan/scene/: Camera.h  OptiXScene.h  OptixIntersectable.h  Ray.h  SceneIntersectable.h  TriangleMesh.h  cameras.h  film.h  importers.h  lights.h  meshes.h  ray.h  scene_data.h  scenedata.h  shapes.h
include/tunan/tracer/: path.h  tracer.h
include/tunan/utils/: MemoryAllocator.h  ResourceManager.h  TaggedPointer.h  file_utils.h  image_utils.h  model_loader.h  type_utils.h
include/tunan/utils/memory/: Allocator.h  CPUResource.h  CUDAResource.h  CudaAllocator.h  HostAllocator.h  MemoryResource.h
src/tunan/base/: distributions.cpp  interactions.cpp  math.cpp  transform.cpp
src/tunan/gpu/: optix_ray.cu  optix_tracing.cu
src/tunan/material/: Lambertian.cpp  Material.cpp  bsdfs.cpp  fresnels.cpp  mappings.cpp  materials.cpp  microfacets.cpp  textures.cpp
src/tunan/medium/: Medium.cpp  mediums.cpp  phase_functions.cpp
src/tunan/parallel/: parallels.cpp
src/tunan/sampler/: SamplerFactory.cpp  samplers.cpp
src/tunan/scene/: Camera.cpp  OptiXScene.cpp  OptixIntersectable.cpp  Ray.cpp  TriangleMesh.cpp  cameras.cpp  film.cpp  importers.cpp  lights.cpp  meshes.cpp  ray.cpp  scene_data.cpp  scenedata.cpp  shapes.cpp
src/tunan/tracer/: path.cpp
src/tunan/utils/: MemoryAllocator.cpp  ResourceManager.cpp  file_utils.cpp  image_utils.cpp  model_loader.cpp
src/tunan/utils/memory/: CPUResource.cpp  CUDAResource.cpp  CudaAllocator.cpp  HostAllocator.cpp
